# APForge

./: .env.example  .gitignore  LICENSE  Project Summary — AP Skill-Based Generation System.md  README.md  dashboard.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
config/: policy.json
data/: topic_registry.json
data/ap_sources/mcq_questions/: README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  (+1 more)
scripts/: run_eval.py  start-api.sh  start-frontend.sh
skill_specs/ap_biology/: evidence_reasoning.yaml  experimental_interpretation.yaml  graph_interpretation.yaml  prediction_reasoning.yaml  variable_analysis.yaml
skill_specs/ap_precalculus/: asymptotes.yaml  data_modeling.yaml  end_behavior.yaml  exponential_growth.yaml  logarithmic_expressions.yaml  polar_functions.yaml  rates_of_change.yaml  sinusoidal_functions.yaml  sinusoidal_modeling.yaml
src/ap_skill_generator/: __init__.py  __main__.py  api.py  auth.py  config.py  dependencies.py  engine.py  eval_suite.py  evaluation.py  harness.py  logging_utils.py  prompts.py  providers.py  rate_limit.py  schema.py  skills.py  storage.py
tests/: conftest.py  test_api.py  test_computation.py  test_engine_and_storage.py  test_engine_fallback.py  test_harness.py  test_logging_redaction.py  test_routing.py  test_schema_and_skill.py  test_skill_production.py  test_style_patterns.py  test_topic_registry.py  test_visuals.py
(+76 files in other folders)
